feat: dynamic facilities management
